# sketch-vision-pmldl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
backend/: app.js  index.html  style.css
cpp/: metrics.cpp
docs/: ITMOtheme.sty  PMLDL_Assignment1.fdb_latexmk  PMLDL_Assignment1.fls  PMLDL_Assignment1.out  PMLDL_Assignment2.tex  PMLDL_Assignment3.tex  main.tex  sketch-vision-eng.aux  sketch-vision-eng.fdb_latexmk  sketch-vision-eng.fls  sketch-vision-eng.out  sketch-vision-eng.tex  sketch-vision.aux  sketch-vision.fdb_latexmk  sketch-vision.fls  sketch-vision.out  sketch-vision.tex
evaluation/: metrics.py
examples/: FizzBuzz.hs  Fractals.hs  PrimeSieve.hs
fronted (deprecated)/src/main/java/com/sketchvision/fronted/util/: StringUtils.java
frontend/: README.md  go.mod
frontend (deprecated)/src/main/java/com/sketchvision/fronted/: App.java
frontend (deprecated)/src/main/java/com/sketchvision/fronted/algo/: Matrix.java
frontend (deprecated)/src/main/java/com/sketchvision/fronted/model/: Pair.java
frontend (deprecated)/src/main/java/com/sketchvision/fronted/util/: LRUCache.java
frontend/cmd/app/: main.go
frontend/internal/algo/: matrix.go
frontend/internal/model/: pair.go
frontend/internal/util/: lru.go  stringutils.go
machineLearning/: attention.py  jax-attention.py
preprocessing/: generate_synthetic.py  merge_sources.py  preprocessing.ipynb  visualize_annotations.py
scripts/: plot_basic_figs.py  plot_synthetic_stats.py
src/: lib.rs  main.rs
