[package]
name = "sketch-vision"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tiny CLI tool to detect edges in images using the Sobel operator."
repository = "https://example.com/your-repo"
keywords = ["cli", "image", "sobel", "edges"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = true, features = ["png", "jpeg"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
